# Kronos

./: .dockerignore  .env.example  .gitignore  Dockerfile.daemon  Dockerfile.dashboard  backtester.py  broker_api.py  dashboard.py  database.py  docker-compose.yaml  kronos.service  pyproject.toml  setup.sh  signal_generator.py  skills-lock.json  skills_engine.py  start_dashboard.sh  strategist.py  trader_daemon.py
Docs/: repo.md
config/: default.yaml
src/kronos/: config.py
src/kronos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/kronos/backtester/: engine.py
src/kronos/broker/: base.py  fyers.py
src/kronos/daemon/: trader.py
src/kronos/data/: fetcher.py  repository.py
src/kronos/model/: kronos.py
src/kronos/research/: node.py  skills.py
src/kronos/signals/: generator.py
src/kronos/strategy/: objective_tracker.py  strategist.py
src/kronos/training/: dataset.py
tests/: test_broker.py
ui/: app.py  dashboard.py
ui/templates/: dashboard.html
webui/templates/: dashboard.html
